--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -9,11 +9,11 @@ $nav-border: #e6e6e6;
 
 .sidebar-wrapper nav ul
 {
-    font-size: 0.8rem;
+    font-size: 1rem;
     font-weight: 700;    
     list-style: none;
     margin-right: $unit-half;
-    min-height: 150px;
+    min-height: 160px;
 }
 
 
@@ -21,6 +21,7 @@ $nav-border: #e6e6e6;
 {
     display: block;
     text-align: right;
+    margin-bottom: $unit-quarter;
 }
 
 .sidebar-wrapper nav ul li.active a { font-weight: 700; }  
@@ -41,7 +42,7 @@ $nav-border: #e6e6e6;
 .sidebar-wrapper .info
 {
     border-right: 3px solid #e6e6e6;
-    font-size: 0.8rem;
+    font-size: 1rem;
     text-align: right;
     padding-right: $unit-half;
 }
